--- a/config.json
+++ b/config.json
@@ -1,22 +1,14 @@
 {
     "port": 5101,
-    "startup": [
-        "automod",
-        "customroles",
-        "internals",
-        "messagelogs",
-        "moderation",
-        "nukeguard",
-        "polls",
-        "settings",
-        "utility"
-    ],
     "guild": "805458032908959804",
     "mute": "805458032908959805",
+    "verify": "805458032929538061",
     "ranks": {
         "shenhe": {
             "level": 1000000,
-            "ids": []
+            "ids": [
+                "920844890563305472"
+            ]
         },
         "owner": {
             "level": 10000,
@@ -177,7 +169,22 @@
             "trial",
             "staff"
         ],
+        "modmail": [
+            "owner",
+            "admin",
+            "bot",
+            "bypass",
+            "mod",
+            "tcmod",
+            "trial"
+        ],
         "clear": [
+            "owner",
+            "admin",
+            "bot",
+            "bypass"
+        ],
+        "poll": [
             "owner",
             "admin",
             "bot",
@@ -187,6 +194,15 @@
             "owner",
             "admin",
             "dev"
+        ],
+        "sticky": [
+            "owner",
+            "admin",
+            "bot",
+            "bypass",
+            "mod",
+            "tcmod",
+            "trial"
         ],
         "immunity": [
             "owner",
@@ -229,11 +245,16 @@
     },
     "channels": {
         "admin": "912781727087341618",
+        "boost_count": "829803392447545404",
         "boosts": "808065247260704839",
         "logs": "922888612054454302",
+        "member_count": "927057269064085504",
+        "message_logs": "922671895495733278",
         "mod": "841857695265980466",
+        "modmail_category": "935215609527009321",
+        "modmail_logs": "935215711406661682",
         "watchlist": "899332321583464478",
-        "message_logs": "922671895495733278"
+        "welcome": "890252868135825408"
     },
     "webhooks": {
 
