--- a/config.json
+++ b/config.json
@@ -58,6 +58,12 @@
                 "905624291326959660"
             ]
         },
+        "leader": {
+            "level": 1,
+            "ids": [
+                "805458032929538062"
+            ]
+        },
         "art": {
             "level": 1,
             "ids": [
@@ -169,15 +175,6 @@
             "trial",
             "staff"
         ],
-        "modmail": [
-            "owner",
-            "admin",
-            "bot",
-            "bypass",
-            "mod",
-            "tcmod",
-            "trial"
-        ],
         "clear": [
             "owner",
             "admin",
@@ -229,6 +226,23 @@
             "mod",
             "tcmod",
             "trial"
+        ],
+        "modmail": [
+            "owner",
+            "admin",
+            "bot",
+            "bypass",
+            "mod",
+            "tcmod",
+            "trial"
+        ],
+        "application": [
+            "owner",
+            "admin",
+            "bot",
+            "bypass",
+            "mod",
+            "leader"
         ]
     },
     "support_anchor": "903686165792706580",
@@ -256,9 +270,7 @@
         "watchlist": "899332321583464478",
         "welcome": "890252868135825408"
     },
-    "webhooks": {
-
-    },
+    "webhooks": {},
     "log_ignore": [],
     "prefix": "!!/",
     "db_options": {
@@ -268,5 +280,71 @@
         "password": "shenhe",
         "port": 5432
     },
-    "color": "d9e9f9"
+    "color": "d9e9f9",
+    "website": {
+        "domain": "https://shenhemains.com",
+        "carousel": [
+            "/static/images/events/christmas-2021.png"
+        ]
+    },
+    "staff_teams": {
+        "mod": {
+            "roles": [
+                "805458032938188838",
+                "905624291326959660"
+            ],
+            "channel": "926955737152888882",
+            "open": false
+        },
+        "tcmod": {
+            "roles": [
+                "912397080947986462",
+                "905624291326959660"
+            ],
+            "channel": "926956523383554098",
+            "open": true
+        },
+        "dev": {
+            "roles": [
+                "912873387347554345"
+            ],
+            "channel": "926955652964835388",
+            "open": false
+        },
+        "art": {
+            "roles": [
+                "906609595554873464"
+            ],
+            "channel": "926956790602674197",
+            "open": true
+        },
+        "tc": {
+            "roles": [
+                "889040956228263966"
+            ],
+            "channel": "926956685115928646",
+            "open": false
+        },
+        "tl": {
+            "roles": [
+                "900037988518608978"
+            ],
+            "channel": "926957072082423911",
+            "open": true
+        },
+        "event": {
+            "roles": [
+                "838128715204263988"
+            ],
+            "channel": "926956979014991922",
+            "open": true
+        },
+        "media": {
+            "roles": [
+                "920748102288302081"
+            ],
+            "channel": "926957139468116018",
+            "open": false
+        }
+    }
 }
