--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@discordjs/rest": "^0.2.0-canary.0",
         "clear-module": "^4.1.2",
+        "cookie-session": "^2.0.0",
         "discord-api-types": "^0.26.1",
         "discord.js": "^13.6.0",
         "express": "^4.17.2",
