--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@discordjs/rest": "^0.2.0-canary.0",
+        "child_process": "^1.0.2",
         "clear-module": "^4.1.2",
         "cookie-session": "^2.0.0",
         "discord-api-types": "^0.26.1",
