update application flow

--- a/config.json
+++ b/config.json
@@ -262,6 +262,7 @@
     },
     "channels": {
         "admin": "912781727087341618",
+        "application_category": "926955286198116352",
         "boost_count": "829803392447545404",
         "boosts": "808065247260704839",
         "logs": "922888612054454302",
@@ -298,7 +299,6 @@
                 "805458032938188838",
                 "905624291326959660"
             ],
-            "channel": "926955737152888882",
             "open": false
         },
         "tcmod": {
@@ -306,49 +306,42 @@
                 "912397080947986462",
                 "905624291326959660"
             ],
-            "channel": "926956523383554098",
             "open": true
         },
         "dev": {
             "roles": [
                 "912873387347554345"
             ],
-            "channel": "926955652964835388",
             "open": false
         },
         "art": {
             "roles": [
                 "906609595554873464"
             ],
-            "channel": "926956790602674197",
             "open": true
         },
         "tc": {
             "roles": [
                 "889040956228263966"
             ],
-            "channel": "926956685115928646",
             "open": false
         },
         "tl": {
             "roles": [
                 "900037988518608978"
             ],
-            "channel": "926957072082423911",
             "open": true
         },
         "event": {
             "roles": [
                 "838128715204263988"
             ],
-            "channel": "926956979014991922",
             "open": true
         },
         "media": {
             "roles": [
                 "920748102288302081"
             ],
-            "channel": "926957139468116018",
             "open": false
         }
     }
