add application logging

--- a/config.json
+++ b/config.json
@@ -263,6 +263,7 @@
     "channels": {
         "admin": "912781727087341618",
         "application_category": "926955286198116352",
+        "application_logs": "936316553912270880",
         "boost_count": "829803392447545404",
         "boosts": "808065247260704839",
         "logs": "922888612054454302",
